welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: Invalid literal number
    a+=1+golomb(i+1_golomb(golomb(i)))
                  ^golomb:6: error: ')' expected but something found.
    a+=1+golomb(i+1_golomb(golomb(i)))
                  ^golomb:6: error: ';' expected but ')' found.
    a+=1+golomb(i+1_golomb(golomb(i)))
                                     ^